# esports

./: pyproject.toml
src/esports/: h.txt
src/esports/data/: player_win_loss.json  players.json  proPlayers.json  steam_player_summaries.json
