[project]
name = "esports"
version = "0.1.0"
description = ""
authors = [
    {name = "Aymane Cheikh",email = "aymanecheikh2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=3.0.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "esports", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
